BizfiCommissionEngine/src/objects/Commission_Rule__c.object
<CustomObject>
    <description>The commission rule object handles the commissions.</description>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Structure__c</fullName>
        <label>Commission Structure</label>
        <referenceTo>Commission_Structure__c</referenceTo>
        <relationshipLabel>Commission Rule</relationshipLabel>
        <relationshipName>Commission_Rule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payable_Type__c</fullName>
        <label>Payable Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Provider Amt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Residual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Of__c</fullName>
        <label>Percentage Of</label>
        <picklist>
            <picklistValues>
                <fullName>All Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Commission Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Funded Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commission Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fixed_or_Percentage</fullName>
        <active>true</active>
        <description>Cannot create a Commission Rule with properties of a Fixed and Percentage commission.</description>
        <errorConditionFormula>OR( AND(NOT(ISBLANK(Fixed_Amount__c)), NOT(ISPICKVAL(Percentage_Of__c,&quot;&quot;))), AND( NOT(ISBLANK(Fixed_Amount__c)), NOT(ISBLANK(Commission_Percentage__c)) ))</errorConditionFormula>
        <errorMessage>Please either complete the fields applicable to a percentage commission or fixed commission.</errorMessage>
    </validationRules>
</CustomObject>